Fix top-menu visibility
Had been unable to “log out” after having created an account

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,4 @@
-#HeaderLower #SideCategoryList .sf-menu li ul { background-color: #fff; box-shadow: 0 0.125rem 0.125rem 0 rgba(0, 0, 0, 0.2), 0 0.375rem 0.625rem 0 rgba(0, 0, 0, 0.3); }
+#HeaderLower #SideCategoryList .sf-menu li ul { background-color: #fff; box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.3); }
 
 #HeaderLower #SideCategoryList li#index-link:hover { background: #569300; }
 
@@ -26,8 +26,6 @@
 
 #HeaderLower #SideCategoryList li ul li ul li:hover a, #HeaderLower #SideCategoryList .sf-menu li ul li ul li:hover a { color: #fff !important; }
 
-#HeaderLower #Menu ul li:nth-child(4) { display: none; visibility: hidden; }
-
 .topNav.on-screen ul.MenuList { display: none !important; visibility: hidden !important; }
 
 #Container { width: 1180px; margin: auto; }
@@ -38,7 +36,7 @@
 
 .custom-sidebar { width: 215px; float: left; padding-top: 20px; }
 
-.custom-sidebar .panel { background: #F4F4F4; margin-bottom: 15px; box-shadow: 0 0.0625rem 0.25rem 0 rgba(0, 0, 0, 0.37); padding: 8px 7px; }
+.custom-sidebar .panel { background: #F4F4F4; margin-bottom: 15px; box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); padding: 8px 7px; }
 
 .custom-sidebar .panel .panel-label { color: #569300; font-size: 18px; text-transform: none; letter-spacing: 0; margin-bottom: 14px; }
 
@@ -122,7 +120,7 @@ body#index #Wrapper #tagline h3 { text-transform: none; font-size: 23px; letter-
 
 #index-summary ul li { font-size: 18px; line-height: 1.4; }
 
-#plant-service-banner { margin-bottom: 30px; background: #E8E8E8; padding: 12px; display: inline-block; border-radius: 6px; box-shadow: 0 0.0625rem 0.25rem 0 rgba(0, 0, 0, 0.37); }
+#plant-service-banner { margin-bottom: 30px; background: #E8E8E8; padding: 12px; display: inline-block; border-radius: 6px; box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); }
 
 #plant-service-banner h3 { color: #569300; text-transform: none; margin-bottom: 8px; font-size: 20px; letter-spacing: 0; }
 
@@ -132,7 +130,7 @@ body#index #Wrapper #tagline h3 { text-transform: none; font-size: 23px; letter-
 
 .PrimaryProductDetails .ProductMain { padding-left: 10px; }
 
-.PostBody p { font-size: 1rem; line-height: 1.4; }
+.PostBody p { font-size: rem(16); line-height: 1.4; }
 
 .PostBody a { color: #569300; text-decoration: underline; }
 
@@ -144,9 +142,9 @@ table#case-for-quality-plants img { max-width: 300px; }
 
 table.borderless td { border: 0; }
 
-.button, .small.button { padding: 5px 10px !important; text-decoration: none !important; text-transform: uppercase !important; background: #569300; border-radius: 5px !important; box-shadow: 0 0.0625rem 0.25rem 0 rgba(0, 0, 0, 0.37); letter-spacing: 1px; color: #fff; font-family: "Montserrat", Helvetica, Arial, sans-serif; border: 2px solid #569300; }
+.button, .small.button { padding: 5px 10px !important; text-decoration: none !important; text-transform: uppercase !important; background: #569300; border-radius: 5px !important; box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); letter-spacing: 1px; color: #fff; font-family: "Montserrat", Helvetica, Arial, sans-serif; border: 2px solid #569300; }
 
-.button:hover { background: #fff; box-shadow: 0 0.125rem 0.125rem 0 rgba(0, 0, 0, 0.2), 0 0.375rem 0.625rem 0 rgba(0, 0, 0, 0.3); color: #000 !important; }
+.button:hover { background: #fff; box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.3); color: #000 !important; }
 
 .small.button { font-size: 14px; }
 
@@ -160,15 +158,15 @@ a.standard { color: #569300; text-decoration: underline; }
 
 a.standard:hover { text-decoration: none; color: #2199E8; }
 
-.shadow-1 { box-shadow: 0 0.0625rem 0.25rem 0 rgba(0, 0, 0, 0.37); }
+.shadow-1 { box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); }
 
-.shadow-2 { box-shadow: 0 0.125rem 0.125rem 0 rgba(0, 0, 0, 0.2), 0 0.375rem 0.625rem 0 rgba(0, 0, 0, 0.3); }
+.shadow-2 { box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.3); }
 
-.shadow-3 { box-shadow: 0 0.6875rem 0.4375rem 0 rgba(0, 0, 0, 0.19), 0 0.8125rem 1.5625rem 0 rgba(0, 0, 0, 0.3); }
+.shadow-3 { box-shadow: 0 11px 7px 0 rgba(0, 0, 0, 0.19), 0 13px 25px 0 rgba(0, 0, 0, 0.3); }
 
-.shadow-4 { box-shadow: 0 0.875rem 0.75rem 0 rgba(0, 0, 0, 0.17), 0 1.25rem 2.5rem 0 rgba(0, 0, 0, 0.3); }
+.shadow-4 { box-shadow: 0 14px 12px 0 rgba(0, 0, 0, 0.17), 0 20px 40px 0 rgba(0, 0, 0, 0.3); }
 
-.shadow-5 { box-shadow: 0 1.0625rem 1.0625rem 0 rgba(0, 0, 0, 0.15), 0 1.6875rem 3.4375rem 0 rgba(0, 0, 0, 0.3); }
+.shadow-5 { box-shadow: 0 17px 17px 0 rgba(0, 0, 0, 0.15), 0 27px 55px 0 rgba(0, 0, 0, 0.3); }
 
 table.plain, table.shop-for-plants, table.shop-for-pots { border: 0; padding: 0; margin: 0; }
 
@@ -176,13 +174,13 @@ table.plain td, table.shop-for-plants td, table.shop-for-pots td { border: 0; ma
 
 table.shop-for-plants tbody tr td, table.shop-for-pots tbody tr td { text-align: center; }
 
-table.shop-for-plants tbody tr td a, table.shop-for-pots tbody tr td a { box-shadow: 0 0.0625rem 0.25rem 0 rgba(0, 0, 0, 0.37); font-size: 15px; background: #f4f4f4; padding: 10px; display: inline-block; line-height: 1.5; border: 1px solid #f4f4f4; }
+table.shop-for-plants tbody tr td a, table.shop-for-pots tbody tr td a { box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); font-size: 15px; background: #f4f4f4; padding: 10px; display: inline-block; line-height: 1.5; border: 1px solid #f4f4f4; }
 
 table.shop-for-plants tbody tr td a span, table.shop-for-pots tbody tr td a span { display: block; font-size: 18px; }
 
 table.shop-for-plants tbody tr td a img, table.shop-for-pots tbody tr td a img { border: 1px solid #569300; display: block; margin: 0 auto 10px; }
 
-table.shop-for-plants tbody tr td a:hover, table.shop-for-pots tbody tr td a:hover { background: #fff; color: #000; box-shadow: 0 0.125rem 0.125rem 0 rgba(0, 0, 0, 0.2), 0 0.375rem 0.625rem 0 rgba(0, 0, 0, 0.3); border: 1px solid #569300; }
+table.shop-for-plants tbody tr td a:hover, table.shop-for-pots tbody tr td a:hover { background: #fff; color: #000; box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.3); border: 1px solid #569300; }
 
 table.shop-for-plants tbody tr td a:hover span, table.shop-for-pots tbody tr td a:hover span { text-decoration: underline; }
 
@@ -204,8 +202,8 @@ ul#pot-sizes li { font-size: 18px; line-height: 1.3; }
 
 .Content .ProductList li:hover .ProductImage { background: #f7f7f7; border: 1px solid #569300; }
 
-.Content .ProductList li:hover .ProductImage img { border: 1px solid #fff; box-shadow: 0 0.0625rem 0.25rem 0 rgba(0, 0, 0, 0.37); }
+.Content .ProductList li:hover .ProductImage img { border: 1px solid #fff; box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); }
 
 .ProductList li .ProductActionAdd a:hover, #CategoryContent .ProductActionAdd a:hover { background: #569300 !important; color: #fff !important; }
 
-.ProductPriceWrap { box-shadow: 0 0.0625rem 0.25rem 0 rgba(0, 0, 0, 0.37); }
+.ProductPriceWrap { box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); }
