--- a/scss/blocks/_pages-menu.scss
+++ b/scss/blocks/_pages-menu.scss
@@ -94,10 +94,10 @@
 		}
 	}
 
-	#Menu ul li:nth-child(4) {
-		display: none;
-		visibility: hidden;
-	}
+	// #Menu ul li:nth-child(4) {
+	// 	display: none;
+	// 	visibility: hidden;
+	// }
 }
 
 
